# fastrace

./: CHANGELOG.md  Cargo.toml  README.md  taplo.toml
.github/workflows/: ci.yml
benches/: Cargo.toml
crates/fastrace/: Cargo.toml
crates/fastrace-futures/: Cargo.toml  README.md
crates/fastrace-futures/src/: lib.rs
crates/fastrace-macro/: Cargo.toml
crates/fastrace-opentelemetry/: Cargo.toml
crates/fastrace-opentelemetry/src/: lib.rs
crates/fastrace/src/: lib.rs
crates/fastrace/src/local/: local_span_line.rs
examples/: Cargo.toml  logging.rs
examples/console-reporter/: Cargo.toml  main.rs
examples/fastrace-disabled/: Cargo.toml  main.rs
examples/log-integration/: Cargo.toml  main.rs
examples/opentelemetry-reporter/: Cargo.toml  main.rs
examples/sampling/: Cargo.toml  main.rs
examples/test-harness-integration/: Cargo.toml  main.rs
fastrace/: Cargo.toml
fastrace-datadog/: Cargo.toml
fastrace-futures/: Cargo.toml
fastrace-futures/src/: lib.rs
fastrace-jaeger/: Cargo.toml
fastrace-macro/: Cargo.toml
fastrace-opentelemetry/: CHANGELOG.md  Cargo.toml
tests-build/: Cargo.toml
tests-integration/: Cargo.toml
tests-integration/tests/: tests.rs
tests/macros/: Cargo.toml
