[workspace]
exclude = ["benches", "examples"]
members = ["crates/*", "tests-build", "tests-integration"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fast/fastrace"
rust-version = "1.91.0"

[workspace.dependencies]
# Workspace dependencies
fastrace = { version = "0.7.18", path = "crates/fastrace" }
fastrace-futures = { path = "crates/fastrace-futures" }
fastrace-macro = { version = "0.7.18", path = "crates/fastrace-macro" }
fastrace-opentelemetry = { path = "crates/fastrace-opentelemetry" }

# crates.io dependencies
fastant = { version = "0.1.11" }
futures = { version = "0.3.32" }
futures-core = { version = "0.3.32" }
futures-sink = { version = "0.3.32" }
log = { version = "0.4.32" }
opentelemetry = { version = "0.32.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
  "trace",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
  "trace",
] }
parking_lot = { version = "0.12.5" }
pin-project = { version = "1.1.13" }
rand = { version = "0.10.1" }
rtrb = { version = "0.3.4" }
serde = { version = "1.0.228", features = ["derive"] }

# test-only dependencies
async-stream = { version = "0.3.6" }
# The `fastrace::trace` procedural macro only supports async-trait>=0.1.52
async-trait = { version = "0.1.52" }
crossbeam = { version = "0.8.4" }
futures-timer = { version = "3.0.4" }
insta = { version = "1.48.0" }
logcall = { version = "0.2.0" }
mockall = { version = "0.14.0" }
pollster = { version = "0.4.0" }
serial_test = { version = "3.5.0" }
tokio = { version = "1.52.3", features = ["full"] }
trybuild = { version = "1.0.116" }
