[package]
name = "benches"
version = "0.0.0"

edition = "2024"
publish = false

[dev-dependencies]
crossbeam = { version = "0.8.4" }
divan = { version = "0.1.21" }
fastrace = { path = "../crates/fastrace", features = ["enable"] }
fastrace-opentelemetry = { path = "../crates/fastrace-opentelemetry" }
flume = { version = "0.12.0" }
opentelemetry = { version = "0.32.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
  "trace",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
  "trace",
] }
pollster = { version = "0.4.0" }
rtrb = { version = "0.3.4" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-opentelemetry = { version = "0.33.0" }
tracing-subscriber = { version = "0.3.23" }

[profile.bench]
lto = true
opt-level = 3

[[bench]]
harness = false
name = "trace"

[[bench]]
harness = false
name = "compare"

[[bench]]
harness = false
name = "spsc"

[[bench]]
harness = false
name = "id"

[[bench]]
harness = false
name = "vec"
