[package]
name = "tests-build"
publish = false
version = "0.0.0"

edition.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
fastrace = { workspace = true, features = ["enable"] }
futures = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
tokio = { workspace = true }
trybuild = { workspace = true }
