[package]
name = "fastrace"
version = "0.7.18"

categories = ["development-tools::debugging"]
description = "A high-performance timeline tracing library for Rust"
documentation = "https://docs.rs/fastrace"
keywords = ["tracing", "span", "opentelemetry"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
enable = ["fastrace-macro/enable"]

[dependencies]
fastant = { workspace = true }
fastrace-macro = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
rand = { workspace = true }
rtrb = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
crossbeam = { workspace = true }
fastrace = { workspace = true, features = ["enable"] }
futures-timer = { workspace = true }
mockall = { workspace = true }
pollster = { workspace = true }
tokio = { workspace = true }
