[package]
name = "test-macros-ui"
publish = false
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
async-stream = { version = "0.3" }
fastrace = { workspace = true, features = ["enable"] }
futures = { version = "0.3" }
log = { workspace = true }
logcall = { version = "0.2" }
tokio = { workspace = true }
trybuild = { version = "1.0" }

# The procedural macro `trace` only supports async-trait higher than or equal to 0.1.52
async-trait = { version = "0.1.52" }
